# Text2BIP

./: .classpath  .project
aText2bip/: text2bipNew.stg  text2bipOld.stg
aText2bip/CTLspecs/: Payload.smv  specs-Payload  specs2-Payload  specsTr-Payload
aText2bip/CTLspecsTranslation/: CDMSStatus.smv  CubETH.smv  FlashMemory.smv  HKCDMS.smv  HKPL.smv  I2Csat.smv  Payload.smv  specs  specs-FlashMemory  specs-HKCDMS  specs-HKEPS  specs-HKPL  specs-I2Csat  specs-Payload  specs2  specs2-CDMSStatus  specs2-FlashMemory  specs2-HKCDMS  specs2-HKEPS  specs2-HKPL  specs2-I2Csat  specsTr-FlashMemory  specsTr-HKCDMS  specsTr-HKEPS  specsTr-HKPL  specsTr-I2Csat
aText2bip/modelTransformation/: SndrMngActFl_bipModel.bip  SndrMngActFl_textModel  TCF1_bipModel.bip  TCF1_textModel  TCF2_bipModel.bip  TCF2_textModel  TCF3_bipModel.bip  TCF3_textModel  TCF4_bipModel.bip  TCF4_textModel  TC_bipModel.bip  TC_textModel  TCmngMode_bipModel.bip  TCmngMode_textModel  TMF1F2_bipModel.bip  TM_bipModel.bip  TM_textModel  ctl  nuxmvOut  nuxmvOut2  priorities.txt
aText2bip/modelTransformation/smv_files/: SndrMngActFl.smv  SndrMngActFl2.smv  TC.smv  TC2.smv  TCF1.smv  TCF1_2.smv  TCF2.smv  TCF2_2.smv  TCF3_2.smv  TCF4.smv
archived_models/modelTransformation/: CDMSStatus_bipModel.bip  CDMSStatus_textModel  CUBETH_bipModel.bip  CUBETH_textModel  CUBETH_textModel-keep  CUBETH_textModel~  CubETH.smv  CubETH_priorities.txt  FlashMemory.smv  FlashMemory_bipModel.bip  FlashMemory_bipModel_newBIP.bip  FlashMemory_textModel  HKCDMS.smv  HKCDMS_bipModel.bip  HKCDMS_textModel  HKEPS.smv  HKEPS2.smv  HKEPS_bipModel.bip  HKEPS_textModel  HKPL.smv  HKPL_bipModel.bip  HKPL_textModel  I2Csat.smv  I2Csat_bipModel.bip  I2Csat_textModel  I2Csat_textModel~  Payload.smv  Payload2.smv  Payload_bipModel.bip  Payload_textModel  TC_bipModel-keep.bip  TC_bipModel.bip  TC_textModel  TC_textModel-keep  TM_bipModel.bip  TM_textModel_F1F2  bipModel.bip  generalInts  lala.save  payload_mutex  (+2 more)
archived_models/modelTransformation/archive_snapshots/: textModel_versionBeforeModes
bip_sample/: build.sh  build.sh~  check-old.bip  check.bip  lala  lala-old
bip_sample/ext-cpp/: Standard.cpp  Standard.hpp
bip_sample/output/: CMakeLists.txt
bip_sample/output/Deploy/: Deploy.cpp  Deploy.hpp  DeployTypes.hpp
bip_sample/output/check/: CMakeLists.txt
bip_sample/output/check/include/: check.hpp
bip_sample/output/check/include/check/: AT_check_Atom1.hpp  AT_check_Atom2.hpp  AtomEPort_check_e0b0port.hpp  AtomEPort_check_e1b0port.hpp  AtomEPort_check_e2b0port.hpp  AtomIPort_check_e0b0port.hpp  AtomIPort_check_e1b0port.hpp  AtomIPort_check_e2b0port.hpp  CPV_SingletonD__e0b0port.hpp  CT_check_comp.hpp  ConnPort_check_e0b0port.hpp  ConnPort_check_e1b0port.hpp  ConnPort_check_e2b0port.hpp  ConnT_check_BRDCAST2.hpp  ConnT_check_RDV2.hpp  ConnT_check_Singleton.hpp  ConnT_check_SingletonD.hpp  CpndEPort_check_e0b0port.hpp  CpndEPort_check_e1b0port.hpp  CpndEPort_check_e2b0port.hpp  InterV_check_BRDCAST2.hpp  InterV_check_RDV2.hpp  InterV_check_Singleton.hpp  InterV_check_SingletonD.hpp  Inter_check_BRDCAST2.hpp  Inter_check_RDV2.hpp  Inter_check_Singleton.hpp  Inter_check_SingletonD.hpp  PT_check_e0b0port.hpp  PT_check_e1b0port.hpp  PT_check_e2b0port.hpp  PV_check_e0b0port.hpp  PV_check_e1b0port.hpp  PV_check_e2b0port.hpp  QPR_check_e0b0port.hpp  QPR_check_e1b0port.hpp  QPR_check_e2b0port.hpp
bip_sample/output/check/src/check/: AT_check_Atom1.cpp  AT_check_Atom2.cpp  AtomEPort_check_e0b0port.cpp  AtomEPort_check_e1b0port.cpp  AtomEPort_check_e2b0port.cpp  AtomIPort_check_e0b0port.cpp  AtomIPort_check_e1b0port.cpp  AtomIPort_check_e2b0port.cpp  CPV_SingletonD__e0b0port.cpp  CT_check_comp.cpp  ConnPort_check_e0b0port.cpp  ConnPort_check_e1b0port.cpp  ConnPort_check_e2b0port.cpp  ConnT_check_BRDCAST2.cpp  ConnT_check_RDV2.cpp  ConnT_check_Singleton.cpp  ConnT_check_SingletonD.cpp  CpndEPort_check_e0b0port.cpp  CpndEPort_check_e1b0port.cpp  CpndEPort_check_e2b0port.cpp  InterV_check_BRDCAST2.cpp  InterV_check_RDV2.cpp  InterV_check_Singleton.cpp  InterV_check_SingletonD.cpp  Inter_check_BRDCAST2.cpp  Inter_check_RDV2.cpp  Inter_check_Singleton.cpp  Inter_check_SingletonD.cpp  PT_check_e0b0port.cpp  PT_check_e1b0port.cpp  PT_check_e2b0port.cpp  PV_check_e0b0port.cpp  PV_check_e1b0port.cpp  PV_check_e2b0port.cpp  QPR_check_e0b0port.cpp  QPR_check_e1b0port.cpp  QPR_check_e2b0port.cpp
src/: README
src/pathExploration/: PathParser.java
src/text2bip/: AttrFiller.java  Text2BIP2.java  Text2BIP4Nusmv.java
src/transformBIP/: ParseBIPoutput.java
src/transformSMV/: CTLSpecsCreator.java  CTLspecsTranslator.java  LTLproperties  NusmvTransform.java  RunNuXmv.java  SMVParser.java  TCModel.smv  cmd.txt
